--- a/nmp300.hatenablog.com/entry/2020/08/12/202032.md
+++ b/nmp300.hatenablog.com/entry/2020/08/12/202032.md
@@ -1,5 +1,5 @@
 ---
-Title: Ruby Silverを受験しました
+Title: [Ruby]Ruby Silverを受験しました
 Date: 2020-08-12T20:20:32+09:00
 URL: https://nmp300.hatenablog.com/entry/2020/08/12/202032
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613613549922
@@ -21,9 +21,10 @@ Draft: true
 
 ## はじめに
 この度Ruby Silverを受験しまして、なんとか合格できました。  
-受験までの運びとしてまして、今は試用期間中の身なのですが、その期間内にRuby Silverの取得が求められていたため受験させていただきました。
 
-社内の先輩や同期の方に勉強法から心構えまで色々と教えていただき、なんとか合格できたということで、受験してどうだったのかということを振り返りたいと思います。
+今はプログラマーとして試用期間中の身なのですが、その期間内にRuby Silverの取得が求められていたため受験させていただいたという運びです。
+
+社内の先輩や同期の方に勉強法から心構えまで色々と教えていただき、なんとか合格できたということで、受験してどうだったのかということを感想を中心に書いていきます。
 ## 受験までにやったこと
 勉強期間としては1ヶ月ちょっとくらいです。会社の先輩方に教えていただき、以下のようなことをやっていました。
 - [[改訂2版]Ruby技術者認定試験合格教本](https://www.amazon.co.jp/dp/4774191949)
@@ -31,12 +32,11 @@ Draft: true
 - [ミニツク \- Rubyのe\-ラーニング研修システム](http://www.minituku.net/)
 - [公式の過去問 GitHubにある](https://gist.github.com/sean2121/945035ef2341f0c39bf40762cd8531e0)
 
-上記の問題を1日50問くらいずつ解いていって、解説を読む、公式リファレンスを読むということをやっていました。  
+上記の問題を1日50問ほど解き、解説を読む、公式リファレンスを読むということをやっていました。
 
-問題を解いたら、その記録を以下のような形式で残しておきました。試験前日に自分が間違えやすい問題を見直せます(これは先輩の教えていただいた方法です)。  
-加えいて、徐々に点数が上がっていることが把握できるのでモチベーションが保たれるという効果もあるかもしれません。
+問題を解いたら、その記録を以下のような形式で残しておきました。試験前日に自分が間違えやすい問題を見直せますし、徐々に点数が上がっていることが把握できるのでモチベーションが保たれるという効果もあると思っています。
 ```
-## 20200812 REx
+## 20200812 RExを解く
 - 結果 80 / 100
 ### 自信がなかった問題
 ~~~~~
@@ -48,27 +48,29 @@ Draft: true
 
 このようなことを1ヶ月くらい続けていって、コンスタントに90点以上は取れるようになってきたため、満を時して受験しました。
 ### 苦手分野(正規表現)の勉強について
-私は正規表現を避けて生きてきた節がありまして、とても苦手意識を持っていました。全く覚えられそうになかったのですが、これを機にある程度覚えようと思いまして、伊藤さんの以下のシリーズの記事を一通り拝読しました。
+私は正規表現を避けて生きてきた節がありまして、とても苦手意識を持っていました。  
+全く覚えられそうになかったのですが、これを機にある程度覚えようと思いまして、伊藤さんの以下のシリーズの記事を一通り拝読しました。
 
 [初心者歓迎！手と目で覚える正規表現入門・その１「さまざまな形式の電話番号を検索しよう」 \- Qiita](https://qiita.com/jnchito/items/893c887fbf19e17d3ff9)
 
-一通り拝読してから問題を解いていくと、簡単な正規表現なら分かるようになってきました。
+一通り拝読してから問題を解いていくと、簡単な正規表現なら分かるようになり、とても良い記事だと思いました。
 ## いざ受験
-試験なんてものは、4年ほど前に大学院入試を受けた以来だったため、とても緊張しました。  
-そして、実際に受験してみると想像以上に分からない問題が多くとても焦りました…。  
+実際に受験してみると想像以上に分からない問題が多くとても焦りました…。  
 50問中20問くらいが分からない問題に見えてしまい、「終わった…」と天を仰ぎました。
 
 落ち込みながら、試験に落ちた言い訳を考えていたのですが、落ち着いて見ると「解けそうだぞ」と感じる問題が多いことに気付きました。  
-そのような問題をなんとか解答することができ、最終的には10問くらいは自信がないor分からないけど、後は大丈夫だろうという感じで解答を終了しました。
+そのような問題をなんとか解答でき、最終的には10問くらいは自信がないor分からないけど、後は大丈夫だろうという感じで解答を終了しました。
 
 結果は92点でなんとか合格できました。
 ## 受験してみての感想
 Rubyを勉強し始めて1年くらいになりますが、自分がいかに雰囲気でRubyを書いていたのかを思い知りました。  
-お恥ずかしい話、最初に上記のRuby Silverの合格教本の問題を解いた時は3割ほどしか正解することができず落ち込みました。
+お恥ずかしい話、最初に上記のRuby Silverの合格教本の問題を解いた時は3割ほどしか正解できず落ち込みました。
 
-しかし、今回の機会を通じてRubyの基本的な知識を把握することができたのではないかと思っています。  
-加えて、コードの書き方も少し変わったような感じがしています。  
-具体的には`%w`や`%i`記法などを使うようになったり、苦手だった正規表現もこれを機会に少しだけ分かるようになり、「正規表現を使った処理を書いてみようかな」と思えるようになりました。
+しかし、今回の機会を通じてRubyの基本的な知識を把握できたのではないかと思っています。  
+加えて、コードの書き方も少し変わったように思います。  
+具体的には`%w`や`%i`記法などを使うようになりました。加えて、上述の苦手だった正規表現も少しだけ分かるようになり、「正規表現を使った処理を書いてみようかな」と思えるようになりました。
 
-とはいえ、基本的な知識・文法が備わっているということは綺麗なコードを書けることとイコールではないと思っています。  
-正直なところ、コードを書いて実装するという力はまだまだペーペーなので、精進していきたいです。
+総じて、今回の受験勉強は私にとっては有意義だったものだと思います。
+
+とはいえ、基本的な知識・文法が備わっているということは綺麗なコードを書けることとイコールではないと思います。  
+正直なところ、コードを書いて実装するという力はまだまだペーペーなので、その力を伸ばせるように精進していきたいです。
