「Ruby Silverを受験しました」をリファクタリング

--- a/nmp300.hatenablog.com/entry/2020/08/12/202032.md
+++ b/nmp300.hatenablog.com/entry/2020/08/12/202032.md
@@ -1,24 +1,10 @@
 ---
-Title: [Ruby]Ruby Silverを受験しました
+Title: ■ 
 Date: 2020-08-12T20:20:32+09:00
 URL: https://nmp300.hatenablog.com/entry/2020/08/12/202032
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613613549922
 Draft: true
 ---
-<!-- 
-# Ruby Silverを受験しました
-## はじめに
-- 使用期間中にとって下さいということで受験させていただきました
-## 受験までにやったこと
-## いざ受験
-- 分からない問題が最初20問弱ほどあって、超絶焦りました
-- 落ち着いたら10問くらいは分かったので、なんとかなりました。
-## 受験してみての感想
-- 自分はRubyの知識があまりなかったため、基本的な知識を広く抑えるのに役立った
-    - コードの書き方が少しずつ変わってきた`%w`の記法とか
-- とはいえ、基本的な知識が備わっている = 綺麗なコードを書けるではないので、綺麗なコードを書けるようになりたい
--->
-
 ## はじめに
 この度Ruby Silverを受験しまして、なんとか合格できました。  
 
