「分報機能」の説明の記事を一通り完成させた。

--- a/nmp300.hatenablog.com/entry/2020/08/10/155437.md
+++ b/nmp300.hatenablog.com/entry/2020/08/10/155437.md
@@ -6,89 +6,493 @@ EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006
 Draft: true
 ---
 
-<!-- 全体の構成 
-- はじめに
-    - フィヨルドでこれやりましたという前説
-        - issueのリンク 
-- この記事の対象
-    - 対象
-    - スコープを決める
-- 実装した機能について
-    - 前提条件の共有
-        - フィヨルドブートキャンプがどういうサービスでどこで使われるものを想定しているのか
-    - 自分が実装したこと
-    - 自分が実装しなかったこと
-- 実装した機能の動作
-    - スクリーンショット
-- 実際のコードの解説
-    - 全体的な処理の流れの説明
-    - 書いたコードの解説
-        - コードを持ってきながらここはこういう意味で、こう考えて実装しましたなど。
-        - 実際のコード
-- 最後に
-    - これはあくまで一例ということを伝える
-    - より良い書き方・設計があれば教えて欲しいということを伝える
-    - GitLabなどを少し拝見して、こうした方が良いと思ったということを伝える
-- 参考にした資料
-- 補足 ActionCableの世界観の説明は他の記事を書くこと
--->
-
 ## はじめに
 私が2020年6月まで参加させていただいておりましたフィヨルドブートキャンプでは、スクラム開発を学ぶプラクティスとして、実際にスクラム開発の手法に則ってフィヨルドブートキャンプ受講生が日頃学習に使っているeラーニングのためのアプリを開発するというものがあります。
 
-スクラム開発のプラクティスについて、詳しくは以前に書いた拙文がありますので、そちらをご覧ください。
-<!-- スクラム開発のブログのリンク -->
+スクラム開発のプラクティスについて詳しく知りたい方は、以前に私が書いた拙文がありますので、そちらをご覧ください。
 
-そのプラクティスの中で、私が最後の任されたissueが以下の分報機能の実装でした。
-<!-- 分報機能のissue -->
+https://docs.koheitakahashi.com/entry/2020/05/31/180759
 
-Vue.jsとActionCableを使って、上記のリアルタイムでCRUDができる分報機能を実装しました(大きな機能だったため、自分は本当に最小限の機能の実装し、大枠を作って、あとの細かいところは他の受講生の方に任せたという感じです)。  
-正直なところ、このissueに着手し始めた当初は、「Vue.jsナニモワカラン」、「ActionCableナニソレワカラン」という感じで四苦八苦しておりましました。  
-日本語・英語で検索しても、ActionCableの具体的な実践例が載っている記事をあまり見かけなかったため、これからActionCableを使われる方に少しでも参考になればと思い、この記事を書きました。  
+そのプラクティスの中で、私が最後の任されたissueが以下の分報機能の実装でした。  
+
+https://github.com/fjordllc/bootcamp/issues/1461
+
+そして、以下が私が作成したPRです。現在は他の受講生の方が実装したコードもマージされている状態です。  
+この記事を書いている段階では、必要な機能が未実装なので本番にリリースされてはいません(デザインもまだです)。  
+
+また、本記事で以下に解説するコードの例は私がPRを出してレビューが通った時点のコードになりますので、ご了承ください。
+
+https://github.com/fjordllc/bootcamp/pull/1527
+
+ActionCableとVue.jsを使用して、上記のリアルタイムでCRUDができる分報機能を実装しました(大きな機能だったため、私は最小限の機能の実装し、大枠を作って、その他必要な機能の追加は他の受講生の方に任せたという運びです)。  
+
+正直なところ、このissueに着手し始めた当初は、「Vue.jsナニモワカラン」、「ActionCableナニソレワカラン」という感じで四苦八苦しておりましました。
+
+日本語・英語で検索しても、ActionCableの具体的な実践例が載っている記事をあまり見なかったため、これからActionCableを使われる方に少しでも参考になればと思い、この記事を書きました。  
 
 設計が悪い、書き方が悪いというところは多々あると思いますが、あくまで一例として捉えていただければ幸いです。
-
 ## この記事について
 ### 対象としている読者
 この記事は以下のような方々を対象として書きました。
 - ActionCableの概要は掴めたけど、具体的にどのように書いていけば良いのか分からない。
-- ActionCableの実践例を知りたい。
+- ActionCableを使用したコードの例を知りたい。
 
-つまりは、一度もActionCableを本格的なコードを書いたことがない人を対象としております。
-### 書くこと、書かなかったこと
-<!-- ここはいらないかも -->
-本記事では、以下のようなことについて書いております。
-- 実際に書いたコードを下に、どういう意図で書いたのか、このコードはどういう意味なのか。
+本記事が上記のような方々にとって、少しでも参考になれば幸いです。
 ## 実装した機能について
 ### 前提
-この分報機能はFJORD BOOT CAMPのeラーニングアプリの中の機能の一部として実装しました。
-eラーニングアプリはどのような機能を備えているのかと申し上げると…
-- アプリ内にメンターの方々が作成したプラクティス(カリキュラム)があり、それを受講生が見て、提出物を提出したり
-- 受講生が毎日の学習の記録を綴った日報を作成することができたり、
-- 提出物や日報に対してメンターの方や受講生の方がコメントをつけられたり
-
-などなどの機能を備えております。
+この分報機能はFJORD BOOT CAMPのeラーニングアプリの中で使われる機能の一部として実装しました。
+このeラーニングアプリは以下のような機能を備えております。
+- アプリ内にメンターの方々が作成したプラクティス(カリキュラム)があり、それを受講生が見て、提出物を提出できる。
+- 受講生が毎日の学習の記録を綴った日報を作成することができる。
+- 提出物や日報に対してメンターの方や受講生の方がコメントをつけられる…などなど。
 
 そのため、今回の分報機能は受講生がリアルタイムに学習の様子を呟いたりすることができるという、ブートキャンプ内のTwitterのような用途で使われることを想定して実装しました。
 ### 概要
 ユーザーが分報の投稿・更新・編集・削除をリアルタイムですることができる機能を実装しました。
 
-別々のユーザーがログインしている時、あるユーザーが分報のCRUDをすると、リアルタイム(ページのリロードせず)にそれが反映されているのが確認できます。
-<!-- 動作確認のスクリーンショット -->
-#### フレームワークのバージョンなど
+別々のユーザーがログインしている時、あるユーザーが分報のiCRUDをすると、リアルタイム(ページのリロードせず)にそれが反映されているのが確認できます。
+[![Image from Gyazo](https://i.gyazo.com/5ddbdbddd58081e2b47db05e7ac605e8.gif)](https://gyazo.com/5ddbdbddd58081e2b47db05e7ac605e8)
+### フレームワークなどのバージョン
 - Ruby 2.6.5
 - Ruby on Rails 6.0.3.1
 - Node.js 12.2.0
 - Vue.js 2.6.10
-### 実装しなかったこと
-以下のような機能が必要かと考えましたが、PRが大きくなりすぎて、時間がかかりすぎてしまうため、他の受講生の方々に実装を任せることとした次第です。
-
-- 全ての分報を一気に表示させるのではなく、分報ページのスクロールに応じて表示する機能。
-- ユーザー個別の分報をまとめたページの作成。
-- 他のユーザーの分報にコメントを残す機能等々。
 ## 書いたコードの解説
 ### 全体的な処理の流れ
-全体的な処理の流れは以下のようになります。
-### それでは詳しく…
+ユーザーが分報ページを訪れて、過去の分報一覧が表示されるまでの流れは以下のようになります。
+
+1. ユーザーが分報ページを開いた時に、Vueコンポーネントがcreateされます。
+2. Vueコンポーネントがcreateされたタイミングで、websocketコネクションを確立しようとします。
+3. ユーザーがログインユーザーであれば、websocketコネクションを確立し、subscribeを開始します。
+4. subscribeされたら、Rails側からVue.js側に過去の分報一覧がbroadcastされます。
+5. Vue.js側はbroadcastされた分報一覧を受け取り、それを描画します。
+
+上記のような流れにより、ユーザーは分報ページを訪れた時に過去の分報一覧が見れます。
+
+[![Image from Gyazo](https://i.gyazo.com/c198e4972dfd2b37fedc2da30dca94f5.png)](https://gyazo.com/c198e4972dfd2b37fedc2da30dca94f5)
+
+また、分報をCRUDするときの処理の流れは以下のようになります。
+
+1. Vueコンポーネントがユーザーの操作を受け取ります。
+2. Vueコンポーネントは、その操作に応じて、`app/channels/timelines_channel.rb`で定義されているCRUDメソッドを呼び出して実行します(CRUDメソッド実行後は、そのデータをbroadcastするという処理を行います)。
+3. broadcastされたデータをVue.js側が受け取って、後述するデータと一緒にbroadcastされる`event`という文字列を見て、そのイベントに対応した処理を行います。
+
+[![Image from Gyazo](https://i.gyazo.com/8de5be6e2b590694efc5f2ece0d1d61f.png)](https://gyazo.com/8de5be6e2b590694efc5f2ece0d1d61f)
+
+### コードを解説
+上記で全体的な構成と処理の流れを説明しました。  
+これを踏まえて、各ファイルに記述されたコードを見ていきたいと思います。
+
+#### Rails側
+##### `app/channels/application_cable/connection.rb`
+websocketコネクションを管理します。  
+今回は、以下のように記述しました。
+
+```Ruby
+module ApplicationCable
+  class Connection < ActionCable::Connection::Base
+    # このように書くことで、確立されるwebsocketコネクションの識別子がcurrent_userになります。
+    # さらに、後述するchannelの中でcurrent_userオブジェクトを使えるようになります。
+    identified_by :current_user
+
+    def connect
+      self.current_user = find_verified_user
+    end
+
+    private
+
+      # websocketコネクションの確立を求めてきているuser_idがログインしているユーザーIDと一致する場合は、コネクションを確立。そうでなければ、コネクションを拒否します。
+      def find_verified_user
+        if verified_user = User.find_by(id: session_data["user_id"])
+          verified_user
+        else
+          reject_unauthorized_connection
+        end
+      end
+
+      def session_data
+        cookies.encrypted[Rails.application.config.session_options[:key]]
+      end
+  end
+end
+```
+
+##### `app/channels/timelines_channel.rb`
+ActionCableを使用したwebsocket通信における、controllerの役割を担うのがこのchannelになります。  
+そのため以下のようなことを記述しています。
+
+- クライアントがsubscribeしたときの処理。
+- 分報のCRUDと、CRUD後にデータをbroadcastする。
+
+加えて、ここに定義されたメソッドは後述するVueコンポーネント側で呼び出すことができます。
+
+```Ruby
+class TimelinesChannel < ApplicationCable::Channel
+  before_subscribe :set_host_for_disk_storage
+
+  # ここでchannelがsubscribeされたときの処理を記述することができます。
+  # [以下、書いたコードに込めた自分の意図]
+  # ここでは、timelines_channleがsubsrcibeされた時に、過去の分報データをbroadcastするように処理を書いています。
+  # broadcastメソッドではなく、transmitメソッドを使っているのは、subscribedの中でbroadcastメソッドを使用すると、処理の実行タイミングの関係で、subscriberが特定されない内にbroadcastすることになってしまい、エラーが発生しました。
+  # そのため、subscriberが特定されていない状態でもbroadcastが実行できるtransmitメソッドを使用しています。
+  # また、websocket通信はHPPTのようにステータスコードのように一般化されているものがないはずです。そのため、`event`という文字列を送ることで、broadcastに成功したとき、失敗したときがVue.js側で明確に分かるようになります。
+  def subscribed
+    stream_from "timelines_channel"
+    if !subscription_rejected?
+      transmit({ event: "subscribe", current_user: decorated(current_user).format_to_channel, timelines: formatted_timelines })
+    else
+      transmit({ event: "failed_to_subscribe" })
+    end
+  end
+
+  def create_timeline(data)
+    # [以下、書いたコードに込めた自分の意図]
+    # 分報をcreateする処理と、createした分報をbroadcastする処理を記述しています。
+    set_host_for_disk_storage
+    @timeline = Timeline.new(permitted(data))
+    @timeline.user_id = current_user.id
+    if @timeline.save
+      broadcast_to_timelines_channel("create_timeline", @timeline)
+    else
+      broadcast_to_timelines_channel("failed_to_create_timeline", nil)
+    end
+  end
+
+  def update_timeline(data)
+    set_host_for_disk_storage
+    @timeline = Timeline.find_by(id: data["id"])
+    if @timeline.update(permitted(data))
+      broadcast_to_timelines_channel("update_timeline", @timeline)
+    else
+      broadcast_to_timelines_channel("failed_to_update_timeline", nil)
+    end
+  end
+
+  def delete_timeline(data)
+    set_host_for_disk_storage
+    @timeline = Timeline.find_by(id: data["id"])
+    if @timeline.destroy
+      broadcast_to_timelines_channel("delete_timeline", @timeline)
+    else
+      broadcast_to_timelines_channel("failed_to_delete_timeline", nil)
+    end
+  end
+
+  private
+
+    def permitted(data)
+      params = ActionController::Parameters.new(data)
+      params.require(:timeline).permit(:description)
+    end
+
+    def broadcast_to_timelines_channel(event, timeline)
+      ActionCable.server.broadcast "timelines_channel", { event: event, timeline: decorated(timeline).format_to_channel }
+    end
+
+    def decorated(obj)
+      ActiveDecorator::Decorator.instance.decorate(obj)
+    end
+
+    def formatted_timelines
+      Timeline.order(created_at: :asc).map { |timeline| decorated(timeline).format_to_channel }
+    end
+
+    # local・test環境でActiveStorage::Current.hostが定義されずユーザーアイコンのservice_urlを取得することができなかったため、以下のように定義しています。
+    def set_host_for_disk_storage
+      if %i(local test).include? Rails.application.config.active_storage.service
+        ActiveStorage::Current.host = Rails.application.config.action_cable.url.gsub(/cable/, "")
+      end
+    end
+end
+```
+
+#### Vue.js側
+Vue.js側はchannelへのsubscribeや、channel内のデータを取得して処理するということを管理するための、`timelines-channel.vue`というコンポーネントと、その子コンポーネントで、一つ一つの分報の描画などを管理する`timeline.vue`というコンポーネントを作成しました。
+
+また、エントリーポイントとなる`timeline.js`を作成しました。  
+
+##### `app/javascript/channels/timelines.js`
+
+この`timeline.js`では以下のようなことを行っています。
+
+- `js-timelines`とうい要素が存在しなければ`consumer`(subscribeする前のクライアントのこと)を作成します。
+- `timelines-channel.vue`を`js-timelines`という要素にマウントします。
+
+```JavaScript
+// JavaScriptがActionCableと協調できるようにするライブラリです。
+import ActionCable from 'actioncable'
+import Vue from 'vue'
+import Timelines from './timelines-channel.vue'
+
+document.addEventListener('DOMContentLoaded', () => {
+  const timelines = document.getElementById('js-timelines')
+  if (timelines) {
+    const cable = ActionCable.createConsumer()
+    Vue.prototype.$cable = cable
+
+    new Vue({
+      render: h => h(Timelines)
+    }).$mount('#js-timelines')
+  }
+})
+```
+
+##### `app/javascript/channels/timelines-channel.vue`
+`timelines-channel.vue`では以下のようなことを行っています。  
+
+- このcreatedのタイミングで、`TimelinesChannel`にsubscribeします。
+- `TimelinesChannel`にデータがbroadcastされたのを検知して、データと一緒にbroadcastされた`event`という文字列を見て、それに応じた処理を行います。
+- `app/channels/timelines_channel.rb`で定義されたCRUDメソッドをイベントに応じて実行します。
+
+```Vue.js
+<template lang="pug">
+  .thread-timeline-container
+    .thread-timeline-form.a-card
+      .thread-timeline__author
+        img.thread-timeline__author-icon.a-user-icon(:src="currentUser.avatar_url" :title="currentUser.icon_title")
+      .thread-timeline-form__form.a-card
+        .thread-timeline-form__markdown-parent.js-markdown-parent
+          markdown-textarea(v-model="description" id="js-new-timeline" class="a-text-input js-warning-form thread-timeline-form__textarea js-markdown" name="new_timeline[description]")
+        .thread-timeline-form__actions
+          .thread-timeline-form__action
+            button(v-on:click="createTimeline" :disabled="!validation || buttonDisabled")
+              | 投稿する
+    .thread-timelines
+      timeline(v-for="(timeline, index) in timelines"
+        :key="timeline.id"
+        :timeline="timeline"
+        :currentUser="currentUser"
+        @update="updateTimeline"
+        @delete="deleteTimeline")
+</template>
+<script>
+  import Timeline from './timeline.vue'
+  import MarkdownTextarea from '../markdown-textarea'
+
+  export default {
+    components: {
+      'timeline': Timeline,
+      'markdown-textarea': MarkdownTextarea
+    },
+    data: () => {
+      return {
+        currentUser: {},
+        description: '',
+        timelines: [],
+        timelinesChannel: null,
+        buttonDisabled: false
+      }
+    },
+    created () {
+      this.timelinesChannel = this.$cable.subscriptions.create("TimelinesChannel", {
+        connected: () => {
+          console.log('connected successfully');
+        },
+
+        // 以下がTimelinesChannelにbroadcastされたデータを受け取って処理をする部分になります。
+        received: (data) => {
+          switch (data.event) {
+            case 'subscribe':
+              this.currentUser = data.current_user
+              this.timelines = []
+              data.timelines.forEach((timeline) => {
+                this.timelines.unshift(timeline)
+              });
+              break
+            case 'failed_to_subscribe':
+              console.warn('Failed to subscribe');
+              break
+            case 'create_timeline':
+              this.timelines.unshift(data.timeline);
+              this.description = '';
+              break
+            case 'failed_to_create_timeline':
+              console.warn('Failed to create timeline');
+              break
+            case 'update_timeline':
+              this.timelines.forEach((timeline) => {
+                if (timeline.id === data.timeline.id) {
+                  timeline.description = data.timeline.description
+                }
+              });
+              break
+            case 'failed_to_update_timeline':
+              console.warn('Failed to update timeline');
+              break
+            case 'delete_timeline':
+              this.timelines.forEach((timeline, i) => {
+                if (timeline.id === data.timeline.id) {
+                  this.timelines.splice(i, 1)
+                }
+              });
+              break
+            case 'failed_to_delete_timeline':
+              console.warn('Failed to delete timeline');
+              break
+          }
+        }
+      })
+    },
+    methods: {
+      createTimeline: function () {
+        if (this.description.length < 1) { return null }
+        this.buttonDisabled = true;
+        let params = {
+          'timeline': { 'description': this.description },
+        }
+        this.timelinesChannel.perform('create_timeline', params);
+        this.buttonDisabled = false;
+      },
+      updateTimeline: function (data) {
+        this.timelinesChannel.perform('update_timeline', data);
+      },
+      deleteTimeline: function (data) {
+        this.timelinesChannel.perform('delete_timeline', data);
+      }
+    },
+    computed: {
+      validation: function () {
+        return this.description.length > 0
+      }
+    }
+  }
+</script>
+```
+
+##### `app/javascript/channels/timeline.vue`
+最後に`timelines-channel.vue`の子コンポーネントである、`timeline.vue`について説明します。  
+ここでは以下のようなことを行っています。
+
+- 親コンポーネントからtimelineのデータを受け取って、それを描画します。
+- timelineの編集・削除を行います。
+
+```Vue.js
+<template lang="pug">
+  .thread-timeline.a-card
+    .thread-timeline__author
+      a.thread-timeline__author-link(:href="timeline.user.path" itempro="url")
+        img.thread-timeline__author-icon.a-user-icon(:src="timeline.user.avatar_url" :title="timeline.user.icon_title"  v-bind:class="userRole")
+    .thread-timeline__body.a-card(v-if="!editing")
+      header.thread-timeline__body-header
+        a.thread-timeline__title-link(:href="timeline.user.path" itempro="url")
+          | {{ timeline.user.login_name }}
+        time.thread-timeline__created-at(:datetime="createdAt" pubdate="pubdate")
+          | {{ createdAt }}
+        .card-header-actions(v-if="this.timeline.user.id === this.currentUser.id")
+          ul.card-header-actions__items
+            li.card-header-actions__item
+              button.card-header-actions__action.a-button(@click="editing = !editing")
+                i.fas.fa-pen
+                  | 編集
+            li.card-header-actions__item
+              button.card-header-actions__action.a-button(@click="deleteTimeline")
+                i.fas.fa-trash-alt
+                  | 削除
+      .thread-timeline__description.js-target-blank.is-long-text(v-if="!editing" v-html="markdownDescription")
+    .thread-timeline-form__form.a-card(v-show="editing")
+      markdown-textarea(v-model="description" :class="classTimelineId" class="a-text-input js-warning-form thread-timeline-form__textarea js-timeline-markdown" name="timeline[description]")
+      button(v-on:click="updateTimeline" v-bind:disabled="!validation")
+        | 保存する
+      button(v-on:click="cancel")
+        | キャンセル
+</template>
+<script>
+  import MarkdownTextarea from '../markdown-textarea'
+  import MarkdownIt from 'markdown-it'
+  import MarkdownItEmoji from 'markdown-it-emoji'
+  import moment from 'moment'
+
+  export default {
+    props: ['timeline', 'currentUser'],
+    components: {
+      'markdown-textarea': MarkdownTextarea
+    },
+    data: () => {
+      return {
+        description: '',
+        editing: false,
+      }
+    },
+    created: function() {
+      this.description = this.timeline.description;
+    },
+    mounted: function() {
+      $('textarea').textareaAutoSize();
+    },
+    methods: {
+      editTimeline: function() {
+        this.editing = true;
+      },
+      cancel: function() {
+        this.description = this.timeline.description;
+        this.editing = false;
+      },
+      updateTimeline: function () {
+        if (this.description.length < 1) { return null}
+        let params = {
+          'id' : this.timeline.id,
+          'timeline' : { 'description': this.description }
+        }
+        this.$emit('update', params);
+        this.editing = false;
+      },
+      deleteTimeline: function () {
+        let params = {
+          'id' : this.timeline.id
+        }
+        if (window.confirm('削除してよろしいですか？')) {
+          this.$emit('delete', params);
+        }
+      }
+    },
+    computed: {
+      markdownDescription: function() {
+        const md = new MarkdownIt({
+          html: true,
+          breaks: true,
+          linkify: true,
+          langPrefix: 'language-'
+        });
+        md.use(MarkdownItEmoji)
+        return md.render(this.timeline.description);
+      },
+      classTimelineId: function() {
+        return `timeline-id-${this.timeline.id}`
+      },
+      userRole: function(){
+        return `is-${this.timeline.user.role}`
+      },
+      createdAt: function() {
+        return moment(this.timeline.updated_at).format('YYYY年MM月DD日(dd) HH:mm')
+      },
+      validation: function () {
+        return this.description.length > 0
+      }
+    }
+  }
+</script>
+```
+## まとめ
+上記に各ファイルの解説をさせていただきました。  
+
+改めてまとめるならば、この分報機能のポイントは以下だと思います。
+
+- ActionCableを使用したwebsocket通信におけるcontrollerの役割はchannelが担うものと考えて、`app/channels/timelines_channel.rb`にCRUDメソッドの定義をしています。
+- データをbroadcastする際に`event`という文字列を渡して、Vue.js側でデータのbroadcastが成功したのか失敗したのか、CRUDのいずれかなどを明示することで処理を分けて記述しやすくしました。
+- ActionCableの特徴として、channelに定義されたメソッドをフロントエンド側で呼ぶことができます。
+
+テストなどの解説は割愛させていただきましたが、そちらについてはコードの方を参照していただければと思います。
 ## 最後に
+私自身、設計や書き方がこれで良いのかという思いは拭きれないため、これはあくまでActionCableとVue.jsを用いた機能実装の一例と捉えていただければと思います。
+
+また、issueを担当することになった当初は、「Vue.jsの書き方が分からない…」、「そもそもActionCableとは…」と分かないことだらけという状態でした。  
+しかし、一つ一つ頭を悩ませながら理解して、そしてできる方々に教えていただきながら少しずつ実装を進めていき、なんとかPRを出すところまで進めることができました。  
+教えてくださった方々ありがとうございました。
+
+私の実装では必要な機能を全て備えることができなかったため、まだリリースには至っていませんが、フィヨルドブートキャンプで後からこの分報機能の機能拡張を担当する方の参考にもなればという意味も込めて本記事を書きました。
+
+私は上記のようにAction Cableを理解して実装しましたが、理解や記述が誤っているところなどがあれば教えてくださると大変有り難いです。
 ## 参考にさせていただいた資料
+- [Action Cable の概要 \- Railsガイド](https://railsguides.jp/action_cable_overview.html)
+- [ActionCable \- api.rubyonrails.org](https://api.rubyonrails.org/classes/ActionCable.html)
+- [rails/actioncable\-examples: Action Cable Examples](https://github.com/rails/actioncable-examples)
