宝石の国の記事を修正

--- a/nmp300.hatenablog.com/entry/2020/08/15/121440.md
+++ b/nmp300.hatenablog.com/entry/2020/08/15/121440.md
@@ -7,48 +7,54 @@ Draft: true
 ---
 ## はじめに
 唐突ですが、『宝石の国』読みました。  
-知人に「是非読んでみて」とおすすめされて、「そこまで推すなら…」ということで読んでみたのですが、昨日買って、今日の午前中で一気読みしてしまいました。
+知人に「是非読んでみて」とおすすめされて、「そこまで推すなら…」ということで昨日買って読んでみました。
 
-とても良い作品に出会えたと思い、この衝動をどこかにぶつけたいと思ったため、感想を書いてみました。  
+それが、すごく面白くて今日の午前中で一気読みしてしまいました。
+
+とても良い作品に出会えたと思い、この衝動をどこかにぶつけたいと思ったため、感想を書いみたという次第です。  
 多少なりともネタバレを含んでいますのでご留意ください。
+
+<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://www.amazon.co.jp/dp/4063879062?tag=booklogjp-default-22&linkCode=ogi&th=1&psc=1" target="_blank"><img src="https://m.media-amazon.com/images/I/61BFjZZRVEL._SL160_.jpg" width="105" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://www.amazon.co.jp/dp/4063879062?tag=booklogjp-default-22&linkCode=ogi&th=1&psc=1" target="_blank">宝石の国(1) (アフタヌーンKC)</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E5%B8%82%E5%B7%9D%E6%98%A5%E5%AD%90" target="_blank">市川春子</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em">講談社</div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2013-07-23</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/4063879062" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
+
 ## 読んでみて
 ### 序盤
-1・2巻を読んだ時は、絵本みたいな雰囲気の漫画だなぁと感じました。  
+1・2巻を読んだ時は、「絵本みたいな雰囲気の漫画だなぁ」と感じました。  
 この時点では、そこまで引き込まれるような感じはなく、宝石達の掛け合いが中心の日常系の漫画だと思ってました。
 
 漫画の雰囲気が嫌いではなかったものの、この時点ではキャラ同士の掛け合いにおいて、話していることの意味やノリを理解できませんでした。  
 会話の置いてきぼりをくらっているみたいな感じがありました。
 
-そして、戦闘シーンでは、独特な絵柄のせいか、何をやっているのか・何が起こっているのか分かりにくいと感じていました。
+そして、戦闘シーンでは独特な絵柄のせいか、何をやっているのか・何が起こっているのか分かりにくいと感じていました。
 ### 中盤
 読み進めていくと、主要キャラがどのようなキャラなのかということが分かり始めてきたためか、キャラ同士の掛け合いが理解できるようになった感じがありました。
 
 作品に慣れてきたからか、戦闘シーンでも上記のような分かりづらさをあまり感じなくなりました。  
 
-話の展開的には、フォスが強くなっていく、性格が変わっていくというところで、「今後どのようにフォスが変わっていくのだろう」というところがすごく気になっていきました。
+話の展開的には、フォスが強くなっていく・性格が変わっていくというところで、「今後どのようにフォスが変わっていくのだろう」というところがすごく気になっていきました。
 
-また、フォスが謎に迫っていくことで、私自身そこまで気に留めていなかったこの世界観の秘密が気になってきました。
+また、フォスが謎に迫っていくことで、私自身そこまで気に留めていなかった「宝石の国」の世界の謎が気になってきました。
 ### 最新巻らへん
-すっかり世界の謎や今後の展開が気になって仕方がなくなってしまいました。
+すっかり世界の謎や今後の展開が気になって仕方がなくなってしまい、読むのを止めることができませんでした。
 
 フォスの考えが他の宝石達に届かず、だんだんとすれ違っていく感じがあって息苦しさを感じました。  
 そして、月人と他の宝石達との間で板挟みになっているという構図も辛いものがありました。
 
 そのような多少の苦しさはあるものの、描写の仕方によるものなのか、都度都度和やかなシーンを挟んでいるからなのか、展開的には重苦しいものなのですが、全体の雰囲気としてはそこまで重苦しさがあるわけではありませんでした。
 
-ただ、やはりフォスの今後が気になってしまいますね…
+最新巻の後、フォスはどうなってしまうのか気になってしまいますね…。
 ## 総じて…
-総じて、とても面白い作品だと感じました。  
-最初はほのぼの日常系かと思っていたんですが、実はセカイ系でしたという感じで、完全に引き込ました。
+総じて、とても面白い作品だと思いました。  
+最初はほのぼの日常系かと思っていたんですが、実はセカイ系でしたという感じで、完全に引き込まれました。
 
 絵柄と世界観がマッチしているからか、全体的に絵本みたいな雰囲気がとてもいい感じだと思いました。
-展開もネガティブな展開のはずだけど、淡々と、和やかに描かれており、そこまで重苦しい感じはなく、読み味としてはさっぱりとしたものでした。
+展開もネガティブな展開のはずですが、淡々と和やかに描かれており、そこまで重苦しい感じはなく、読み味としてはさっぱりとしたものでした。
 
-すごくおすすめの本です!!
+すごくおすすめの本なので、気になる方はぜひ一読下さい!!
 ## 執筆後記
-最近、[kanazawaさんのブログ]()を拝見して、自分のレベルアップのためにも、技術的なことをもっとブログに書いてアウトプットしていきたいと思うようになりました。  
-また、[uetennisさん]()のブログも拝見して、日常でおきたことをバーっと書いていくスタイルも良いなぁと思い、僕も日頃思ったことや感じたことをもっとブログに書いていきたいと思うようになりました。
+最近、私が卒業したフィヨルドブートキャンプの受講生の[kanazawaさんのブログ](https://k-koh.hatenablog.com)と、[uetennisさんのブログ](https://uetennis.hatenablog.com/entry/2020/08/14/233453) を拝見して、ブログを書きたいという欲が高まりました。
 
-多分uetenisさんのブログを拝見して、ブログで発信するのは楽しいことなのかもしれないと感じたことも、上記のように思った理由なのかもしれないです。
+kanazawaさんのブログを読んで、「自分のレベルアップのためにも、技術的なことをもっとブログに書いてアウトプットしていきたい」という気持ちになりました。
 
-自分のレベルアップを目指して技術的なことをこのブログに書いていきたいのはもちろんのこと、それに加えて、今後は趣味のような感じで今回のように自分の日常のことも書いていきたいと思ったのでした。
+uetennisさんのブログを読んで、「ブログで何かを発信することは楽しいのかもしれない」「自分の日常生活のことも発信していきたい」という気持ちになりました。
+
+そのため、今後は自分のレベルアップを目指して技術的なことをこのブログに書いていきたいのはもちろんのこと、それに加えて、趣味として今回のように自分の日常のことも書いていきたいと思ったのでした。
