ActionCableの記事を推敲。

--- a/nmp300.hatenablog.com/entry/2020/08/10/155437.md
+++ b/nmp300.hatenablog.com/entry/2020/08/10/155437.md
@@ -9,7 +9,7 @@ Draft: true
 ## はじめに
 私が2020年6月まで参加させていただいたフィヨルドブートキャンプでは、スクラム開発を学ぶプラクティスとして、実際にスクラム開発の手法に則ってアプリを開発するというプラクティスがあります。
 
-そのアプリとは、フィヨルドブートキャンプ受講生が日頃学習に使っているeラーニングアプリです。
+フィヨルドブートキャンプ受講生が日頃学習に使っているeラーニングアプリを実際にスクラム開発の手法に則って開発していきます。
 
 スクラム開発のプラクティスについて詳しく知りたい方は、以前書いた拙文がありますので、そちらをご覧ください。
 
@@ -19,22 +19,24 @@ https://docs.koheitakahashi.com/entry/2020/05/31/180759
 
 https://github.com/fjordllc/bootcamp/issues/1461
 
-そして、以下が、私が作成したPRです。現在は他の受講生の方が実装したコードもマージされている状態です。  
-この記事を書いている段階では、必要な機能が未実装なので本番にリリースされてはいません(デザインもまだです)。
-
-また、本記事で以下に解説するコードの例は私がPRを出してレビューが通った時点のコードになりますので、ご了承ください。
+そして、以下が、私が作成したPRです。  
 
 https://github.com/fjordllc/bootcamp/pull/1527
 
-ActionCableとVue.jsを使用して、上記のリアルタイムでCRUDができる分報機能を実装しました。
+PRの内容としては、ActionCableとVue.jsを使用して、上記のリアルタイムでCRUDができる分報機能を実装したというものになります。
 
-大きな機能だったため、私は最小限の機能の実装し、大枠を作ってその他必要な機能の追加は他の受講生の方に任せたという運びです。
+大きな機能のため、私は最小限の機能の実装し、大枠を作ってその他必要な機能の追加は他の受講生の方がやってくださっているという状態です(本当は私が必要な機能を全て実装できれば良かったのですが…)。
 
 正直なところ、このissueに着手し始めた当初は、「Vue.jsナニモワカラン」「ActionCableナニソレワカラン」という感じで四苦八苦していました。
 
-日本語・英語で検索しても、ActionCableの具体的な実践例が載っている記事をあまり見なかったため、これからActionCableを使われる方に少しでも参考になればと思い、この記事を書きました。
+日本語・英語で検索しても、ActionCableの具体的な実践例が載っている記事をあまりみませんでした。
 
-設計が悪い、書き方が悪いというところは多々あると思いますが、あくまで一例として捉えていただければ幸いです。
+そのため、この記事では私が書いたAction CableとVue.jsのコードを解説します。  
+設計が悪い・書き方が悪いというところは多々あると思いますが、あくまで一例として捉えていただき、ActionCableの実践例として少しでも参考になれば幸いです。
+
+また、本記事で以下に解説するコードの例は私がPRを出してレビューが通った時点のコードになります。  
+そのため、上記ブランチの最新版とはコードが異なることをご了承ください。
+
 ## この記事について
 ### 対象としている読者
 この記事は以下のような方々を対象として書きました。
@@ -491,6 +493,7 @@ document.addEventListener('DOMContentLoaded', () => {
 私自身、設計や書き方がこれで良いのかという思いは拭きれないため、これはあくまでActionCableとVue.jsを用いた機能実装の一例と捉えていただければと思います。
 
 また、issueを担当することになった当初は、「Vue.jsの書き方が分からない…」「そもそもActionCableとは…」と分かないことだらけという状態でした。  
+
 しかし、1つ1つ頭を悩ませながら理解して、そしてできる方々に教えていただきながら少しずつ実装を進めていくことで、なんとかPRを出すところまで進めることができました。  
 教えてくださった方々ありがとうございました。
 
