blogsync pull nmp300.hatenablog.com を実行

--- a/nmp300.hatenablog.com/entry/2020/08/12/202032.md
+++ b/nmp300.hatenablog.com/entry/2020/08/12/202032.md
@@ -1,10 +1,12 @@
 ---
-Title: ■ 
+Title: Ruby Silverを受験しました
+Category:
+- Ruby
 Date: 2020-08-12T20:20:32+09:00
-URL: https://nmp300.hatenablog.com/entry/2020/08/12/202032
+URL: https://docs.koheitakahashi.com/entry/2020/08/12/202032
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613613549922
-Draft: true
 ---
+
 ## はじめに
 この度Ruby Silverを受験しまして、なんとか合格できました。  
 
@@ -12,10 +14,14 @@ Draft: true
 
 社内の先輩や同期の方に勉強法から心構えまで色々と教えていただき、なんとか合格できたということで、受験してどうだったのかということを感想を中心に書いていきます。
 ## 受験までにやったこと
-勉強期間としては1ヶ月ちょっとくらいです。会社の先輩方に教えていただき、以下のようなことをやっていました。
+勉強期間としては1ヶ月ちょっとくらいです。会社の先輩方に教えていただき、以下のようなことをやっていました。  
+
 - [[改訂2版]Ruby技術者認定試験合格教本](https://www.amazon.co.jp/dp/4774191949)
+
 - [REx \- Ruby Examination](https://rex.libertyfish.co.jp/)
+
 - [ミニツク \- Rubyのe\-ラーニング研修システム](http://www.minituku.net/)
+
 - [公式の過去問 GitHubにある](https://gist.github.com/sean2121/945035ef2341f0c39bf40762cd8531e0)
 
 上記の問題を1日50問ほど解き、解説を読む、公式リファレンスを読むということをやっていました。
@@ -32,7 +38,7 @@ Draft: true
 
 上記の他には、ネット上にある先人達の「Ruby Silver合格紀」を読んで、出題されそうな問題や、間違えそうな問題を把握するようにしていました。
 
-このようなことを1ヶ月くらい続けていって、コンスタントに90点以上は取れるようになってきたため、満を時して受験しました。
+このようなことを1ヶ月くらい続けていって、コンスタントに90点以上は取れるようになってきたため、満を持して受験しました。
 ### 苦手分野(正規表現)の勉強について
 私は正規表現を避けて生きてきた節がありまして、とても苦手意識を持っていました。  
 全く覚えられそうになかったのですが、これを機にある程度覚えようと思いまして、伊藤さんの以下のシリーズの記事を一通り拝読しました。
@@ -54,7 +60,9 @@ Rubyを勉強し始めて1年くらいになりますが、自分がいかに雰
 
 しかし、今回の機会を通じてRubyの基本的な知識を把握できたのではないかと思っています。  
 加えて、コードの書き方も少し変わったように思います。  
-具体的には`%w`や`%i`記法などを使うようになりました。加えて、上述の苦手だった正規表現も少しだけ分かるようになり、「正規表現を使った処理を書いてみようかな」と思えるようになりました。
+具体的には`%w`や`%i`記法などを使うようになりました。
+
+上述の苦手だった正規表現も少しだけ分かるようになり、「正規表現を使った処理を書いてみようかな」と思えるようになりました。
 
 総じて、今回の受験勉強は私にとっては有意義だったものだと思います。
 
