--- a/nmp300.hatenablog.com/entry/2020/08/15/121440.md
+++ b/nmp300.hatenablog.com/entry/2020/08/15/121440.md
@@ -1,10 +1,12 @@
 ---
-Title: ■
+Title: 『宝石の国』読みましたー
+Category:
+- 技術以外の話
 Date: 2020-08-15T12:14:40+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/08/15/121440
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613614601715
-Draft: true
 ---
+
 ## はじめに
 唐突ですが、『宝石の国』読みました。  
 知人に「是非読んでみて」とおすすめされて、「そこまで推すなら…」ということで昨日買って読んでみました。
