--- a/nmp300.hatenablog.com/entry/2019/10/01/193855.md
+++ b/nmp300.hatenablog.com/entry/2019/10/01/193855.md
@@ -2,9 +2,8 @@
 Title: Rubyで用意したハッシュをJSON形式にするには？
 Category:
 - Ruby
-- JSON
 Date: 2019-10-01T19:38:55+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/01/193855
+URL: https://docs.koheitakahashi.com/entry/2019/10/01/193855
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613443315100
 ---
 
