--- a/nmp300.hatenablog.com/entry/2019/10/07/191232.md
+++ b/nmp300.hatenablog.com/entry/2019/10/07/191232.md
@@ -1,11 +1,10 @@
 ---
 Title: CSSファイルが読み込めないエラーが出たときはパスを確認すべし
 Category:
-- CSS
 - HTML
 - Sinatra
 Date: 2019-10-07T19:12:32+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/07/191232
+URL: https://docs.koheitakahashi.com/entry/2019/10/07/191232
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613445996396
 ---
 
