--- a/nmp300.hatenablog.com/entry/2019/10/28/085756.md
+++ b/nmp300.hatenablog.com/entry/2019/10/28/085756.md
@@ -1,10 +1,9 @@
 ---
 Title: 自作アプリのアイディア出しのためにKJ法を試してみました
 Category:
-- アイディア
 - Webアプリケーション
 Date: 2019-10-28T08:57:56+09:00
-URL: https://nmp300.hatenablog.com/entry/2019/10/28/085756
+URL: https://docs.koheitakahashi.com/entry/2019/10/28/085756
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613456378884
 ---
 
